# uk-energy-analytics-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
dagster_project/: definitions.py
dagster_project/assets/: carbon_intensity.py
uk_energy/: dbt_project.yml
uk_energy/models/staging/carbon_intensity/: _carbon_intensity__sources.yml  stg_carbon_intensity.sql
