[project]
name = "uk-energy-analytics-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.13.8",
    "dagster-webserver>=1.13.8",
    "dbt-bigquery>=1.11.1",
    "google-cloud-bigquery>=3.41.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
